[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/animals/rabbit/rabbit.png" type="Texture" id=1]
[ext_resource path="res://props/animals/rabbit/rabbit.gd" type="Script" id=2]
[ext_resource path="res://assets/other/white_circle_32x32.png" type="Texture" id=3]
[ext_resource path="res://assets/items/meat/rabbit_meat.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/supermarket.ttf" type="DynamicFontData" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=10]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("graphic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("graphic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 22.0907

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 48.0416

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 24
extra_spacing_top = 16
font_data = ExtResource( 5 )

[node name="rabbit" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.196078 )
position = Vector2( 1.43051e-06, 0 )
scale = Vector2( 1.5, 0.625 )
texture = ExtResource( 3 )

[node name="graphic" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="graphic"]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( 8, -24 )
flip_h = true

[node name="body" type="Polygon2D" parent="graphic"]
color = Color( 0.878431, 0.823529, 0.823529, 1 )
polygon = PoolVector2Array( 14, 0, 5, 0, -1, -6, -5, -7, -2, -2, -3, 0, -16, 0, -22, -10, -18, -20, -8, -26, 5, -26, 14, -18, 10, -10, 10, -6, 14, -4 )

[node name="body2" type="Polygon2D" parent="graphic"]
color = Color( 0.443137, 0.435294, 0.423529, 1 )
polygon = PoolVector2Array( -5, -7, -2, -2, -3, 0, -16, 0, -22, -10, -18, -20, -6, -15 )

[node name="neck" type="Polygon2D" parent="graphic"]
color = Color( 0.878431, 0.823529, 0.823529, 1 )
polygon = PoolVector2Array( 4, -25, 9, -29, 16, -22, 14, -18 )

[node name="body3" type="Polygon2D" parent="graphic"]
color = Color( 0.384314, 0.356863, 0.278431, 1 )
polygon = PoolVector2Array( 12, -20, 6, -15, -1, -16, -4, -26, 4, -26, 9, -25 )

[node name="tail" type="Polygon2D" parent="graphic"]
color = Color( 0.878431, 0.823529, 0.823529, 1 )
polygon = PoolVector2Array( -21, -8, -24, -9, -26, -7, -25, -4, -21, -1, -17, -2 )

[node name="head" type="Polygon2D" parent="graphic"]
color = Color( 0.878431, 0.823529, 0.823529, 1 )
polygon = PoolVector2Array( 8, -28, 9, -32, 15, -34, 23, -28, 25, -21, 22, -19, 13, -21 )

[node name="head2" type="Polygon2D" parent="graphic"]
color = Color( 0.878431, 0.823529, 0.823529, 1 )
polygon = PoolVector2Array( 10, -31, 5, -43, 6, -45, 9, -46, 11, -45, 13, -32 )

[node name="head5" type="Polygon2D" parent="graphic"]
color = Color( 0.831373, 0.447059, 0.807843, 1 )
polygon = PoolVector2Array( 10, -34, 7, -42, 7, -44, 9, -45, 10, -44, 12, -34 )

[node name="head3" type="Polygon2D" parent="graphic"]
color = Color( 0.878431, 0.823529, 0.823529, 1 )
polygon = PoolVector2Array( 14, -33, 15, -46, 18, -47, 20, -45, 16, -33 )

[node name="head4" type="Polygon2D" parent="graphic"]
color = Color( 0.831373, 0.447059, 0.807843, 1 )
polygon = PoolVector2Array( 15, -35, 16, -45, 18, -46, 19, -44, 17, -37 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 10 )
anims/walk = SubResource( 11 )

[node name="eye_detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="eye_detection"]
self_modulate = Color( 0.0588235, 0.580392, 0.862745, 0.568627 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="check_sound_gun" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="check_sound_gun"]
shape = SubResource( 3 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hurtbox"]
visible = false
polygon = PoolVector2Array( -20, -12, -18, -20, -8, -26, 2, -26, 6, -28, 10, -32, 6, -42, 10, -50, 14, -42, 14, -34, 20, -32, 24, -28, 24, -20, 22, -18, 18, -18, 16, -20, 14, -16, 10, -10, 14, 0, 8, 0, 6, -8, 2, 0, -16, 0, -22, -2 )

[node name="drop_item_check_player" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="drop_item_check_player"]
self_modulate = Color( 0.682353, 0.682353, 0.682353, 0.360784 )
shape = SubResource( 4 )
disabled = true

[node name="death_blood" type="Node2D" parent="."]
visible = false
z_index = -1

[node name="Polygon2D" type="Polygon2D" parent="death_blood"]
color = Color( 0.929412, 0.160784, 0.160784, 1 )
polygon = PoolVector2Array( 24, 8, 44, 4, 48, 16, 20, 18 )

[node name="Polygon2D2" type="Polygon2D" parent="death_blood"]
color = Color( 0.87451, 0.164706, 0.164706, 1 )
polygon = PoolVector2Array( -48, 16, -40, 8, -32, 24, -48, 24 )

[node name="Polygon2D3" type="Polygon2D" parent="death_blood"]
color = Color( 0.847059, 0.133333, 0.133333, 1 )
polygon = PoolVector2Array( 90, -2, 74, -16, 50, -8 )

[node name="Polygon2D4" type="Polygon2D" parent="death_blood"]
color = Color( 0.854902, 0.145098, 0.145098, 1 )
polygon = PoolVector2Array( 8, 44, -24, 52, -10, 38 )

[node name="Polygon2D5" type="Polygon2D" parent="death_blood"]
color = Color( 0.815686, 0.211765, 0.211765, 1 )
polygon = PoolVector2Array( -74, -4, -58, -6, -48, 0, -68, 4 )

[node name="Polygon2D6" type="Polygon2D" parent="death_blood"]
color = Color( 0.827451, 0.180392, 0.180392, 1 )
polygon = PoolVector2Array( -20, -16, 0, -20, 16, -14, -14, -8 )

[node name="Polygon2D7" type="Polygon2D" parent="death_blood"]
color = Color( 0.843137, 0.168627, 0.168627, 1 )
polygon = PoolVector2Array( 14, 28, 20, 26, 20, 30, 14, 30 )

[node name="queue_free_timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="drop_item_popup_x" type="Node2D" parent="."]
visible = false
material = SubResource( 5 )
z_index = 20

[node name="background" type="Panel" parent="drop_item_popup_x"]
use_parent_material = true
margin_left = 48.0
margin_top = -186.0
margin_right = 368.0
margin_bottom = 185.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pick" type="Button" parent="drop_item_popup_x/background"]
use_parent_material = true
margin_left = 80.0
margin_top = 298.0
margin_right = 240.0
margin_bottom = 348.0
text = "PICK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="drop_item_popup_x/background"]
use_parent_material = true
position = Vector2( 80, 54 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="drop_item_popup_x/background/Sprite"]
use_parent_material = true
margin_left = 64.0
margin_top = -8.0
margin_right = 202.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 7 )
text = "เนื้อกระต่ายดิบ x1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="drop_item_popup_x/background"]
use_parent_material = true
margin_left = 32.0
margin_top = 162.0
margin_right = 288.0
margin_bottom = 282.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="drop_item_popup_x/background/Panel"]
use_parent_material = true
margin_left = 42.0
margin_top = 22.0
margin_right = 214.0
margin_bottom = 98.0
custom_fonts/normal_font = SubResource( 9 )
text = "ค่าประสบการณ์ 25
เงิน 250"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quest_requite" type="ColorRect" parent="drop_item_popup_x/background"]
visible = false
use_parent_material = true
margin_left = 32.0
margin_top = 84.0
margin_right = 128.0
margin_bottom = 144.0
color = Color( 0.0627451, 0.156863, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quest_" type="Sprite" parent="drop_item_popup_x/background/quest_requite"]
use_parent_material = true
position = Vector2( 48, 30 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="drop_item_popup_x/background/quest_requite/quest_"]
use_parent_material = true
margin_left = 64.0
margin_top = -8.0
margin_right = 202.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 7 )
text = "ไอเทมเควส x1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="eye_detection" to="." method="_on_eye_detection_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="check_sound_gun" to="." method="_on_check_sound_gun_area_entered"]
[connection signal="body_entered" from="drop_item_check_player" to="." method="_on_drop_item_check_player_body_entered"]
[connection signal="body_exited" from="drop_item_check_player" to="." method="_on_drop_item_check_player_body_exited"]
[connection signal="timeout" from="queue_free_timer" to="." method="_on_queue_free_timer_timeout"]
[connection signal="pressed" from="drop_item_popup_x/background/pick" to="." method="_on_pick_pressed"]
